# bug-free-winner

./: .gitignore  README.rst  pyproject.toml
documents/: notes.txt  resources.md
documents/notes/: 2024-04-13-11-52.md
notes/: 2024-04-13-15-25.md  2024-04-13-16-27.md
petr/: blog.py  requirements.md  schema.sql
petr/templates/: base.html
petr/templates/auth/: login.html  register.html
petr/templates/blog/: create.html  index.html  update.html
